fix layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 body {
   background-color: #d14dac;
   color: #ebdfdf;
-  height: 9000px;
+  height: 6000px;
 }
 
 #center-background {
@@ -25,6 +25,12 @@ h1 {
   color:#ece2e2;
 }
 
+h2 {
+  margin-top: 10%;
+  margin-left: 30px;
+  font-size: 50px;
+}
+
 .scroll {
   margin-top: 350px;
   font-size: 50px;
@@ -32,26 +38,19 @@ h1 {
 
 .intro {
   font-size: 0px;
-}
-
-.introBio1 {
-  text-align: center;
-  margin-top: 150px;
-}
-
-.introBio2 {
-  text-align: center;
+  margin-top: 900px;
 }
 
 #headshotImage {
   margin: auto;
-  margin-top: -62%;
+  margin-top: -20%;
 }
 
 #ticTacToe {
   margin: auto;
-  width: auto;
-  height: 75%;
+  width: 20%;
+  height: auto;
+  margin-top: -0%;
 }
 
 button {
@@ -69,26 +68,27 @@ button {
 }
 
 .introBio1 {
-  left: -2800px;
+  left: -2660px;
   position: relative;
   overflow: hidden;
-  margin-top: 25%;
+  margin-top: 700px;
   font-size: 55px;
+  text-align: center;
 }
 
 .introBio2 {
-  margin-top: -35%;
+  margin-top: -14%;
   position: relative;
   overflow: hidden;
   font-size: 50px;
+  text-align: center;
 }
 
 .introBio3 {
   left: 50px;
   position: relative;
-  margin-top: -25%;
+  margin-top: 25%;
   font-size: 25px;
-
 }
 
 .nameColor {
@@ -97,16 +97,32 @@ button {
 
 #selfImage {
   position: relative;
+  margin-top: -33%;
   margin-left: auto;
-  margin-top: -56%;
-  max-width:;
-  height: auto; 
+}
+
+
+#github {
+  height: 50px;
+}
+
+#email {
+  height: 50px;
+}
+
+#linkedin {
+  height: 50px;
+}
+
+.links {
+  margin-top: 10%;
 }
 
 @media screen and (max-width: 1300px) {
+
   .introBio1 {
     left: -2300px;
-    margin-top: 80%;
+
   }
   .introBio2 {
     margin-top: -54%;
@@ -114,5 +130,46 @@ button {
   
   #headshotImage {
     margin-top: -100%;
+  }
+
+  .introBio3 {
+    word-wrap: break-word;
+    font-size: 18px;
+  }
+}
+
+
+
+@media screen and (max-width: 900px) {
+
+  .scroll {
+    margin-top: 250px;
+    font-size: 40px;
+    text-align: left;
+    margin-left: 10%;
+  }
+
+  .intro {
+    font-size: 35px;
+    text-align: left;
+    margin-left: 23%;
+  }
+
+  .introBio1 {
+    left: -2300px;
+  }
+
+  .introBio2 {
+    margin-top: -54%;
+  }
+  
+  #headshotImage {
+    margin-top: -100%;
+    width: 50%;
+  }
+
+  .introBio3 {
+    word-wrap: break-word;
+    font-size: 18px;
   }
 }
